# chatgpt-rss-summarizer

./: LICENSE  README.md  pyproject.toml  rss_summarizer.py
